# git-private2public

./: CHANGELOG.md  LICENSE  README.md  README.ru.md  example.yaml  git-privado.py  git-private2public.py  git_private2public.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ADVANCED.md  ADVANCED.ru.md
templates/: publish.yml
tests/: test_git_private2public.py
